force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Opp_Team_Setting__mdt/ucinn_ascendv2__Gift_Processing_Opp_Team_Setting__mdt.object-meta.xml
<CustomObject>
    <description>For enabling and specifying available fields for multiple responsible people in the form of an Opportunity Team. Please ensure that Team Selling is enabled for your org before using multiple responsible people.</description>
    <label>Gift Processing Opp Team Setting</label>
    <pluralLabel>Gift Processing Opp Team Settings</pluralLabel>
</CustomObject>