force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Opp_Team_Setting__mdt/fields/ucinn_ascendv2__Enable_Opportunity_Contact_Role_Teams__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Opportunity_Contact_Role_Teams__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For enabling the use of Opportunity Contact Role Teams, the Opportunity Team Selling setting does not have to be on.</description>
    <inlineHelpText>For enabling the use of Opportunity Contact Role Teams, the Opportunity Team Selling setting does not have to be on.</inlineHelpText>
    <label>Enable Opportunity Contact Role Teams</label>
    <type>Checkbox</type>
</CustomField>