force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Opp_Team_Setting__mdt/fields/ucinn_ascendv2__Enable_Opportunity_Teams__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Opportunity_Teams__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Enabling Multiple Responsible people on creation of Opportunity. This requires Team Selling to be enabled on the organization.</description>
    <inlineHelpText>For Enabling Multiple Responsible people on creation of Opportunity. This requires Team Selling to be enabled on the organization.</inlineHelpText>
    <label>Enable Opportunity Teams</label>
    <type>Checkbox</type>
</CustomField>