force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Opp_Team_Setting__mdt/fields/ucinn_ascendv2__Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fields_To_Display__c</fullName>
    <description>For displaying Opportunity Team fields on Gift Processing screens. Define fields separated by commas.</description>
    <inlineHelpText>For displaying Opportunity Team fields on Gift Processing screens. Define fields separated by commas.</inlineHelpText>
    <label>Fields To Display</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>