force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Opp_Team_Setting__mdt/validationRules/ucinn_ascendv2__Enable_only_one_Opportunity_Team_type.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Enable_only_one_Opportunity_Team_type</fullName>
    <active>true</active>
    <description>Enable Opportunity Teams cannot be enabled while Enable Opportunity Contact Role Teams is enabled.</description>
    <errorConditionFormula>ucinn_ascendv2__Enable_Opportunity_Teams__c = TRUE &amp;&amp;  ucinn_ascendv2__Enable_Opportunity_Contact_Role_Teams__c = TRUE</errorConditionFormula>
    <errorMessage>Enable Opportunity Teams cannot be enabled while Enable Opportunity Contact Role Teams is enabled.</errorMessage>
</ValidationRule>